# atracdenc-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
crates/atracdenc/: Cargo.toml  README.md
crates/atracdenc-cli/: Cargo.toml
crates/atracdenc-cli/src/: main.rs
crates/atracdenc-cli/tests/: integration.rs  quality.rs
crates/atracdenc-core/: Cargo.toml
crates/atracdenc-core/src/: error.rs  lib.rs  util.rs
crates/atracdenc-core/src/at1/: bitalloc.rs  codec.rs  data.rs  dequantiser.rs  mdct.rs  mod.rs  qmf.rs
crates/atracdenc-core/src/at3/: bitstream.rs  data.rs  encoder.rs  mdct.rs  mod.rs  qmf.rs  yaml_log.rs
crates/atracdenc-core/src/at3p/: bitstream.rs  encoder.rs  ff_dsp.rs  ff_tables.rs  gha.rs  mdct.rs  mod.rs  pqf.rs  tables.rs
crates/atracdenc-core/src/atrac/: mod.rs  psy.rs  scale.rs
crates/atracdenc-core/src/bitstream/: encode.rs  mod.rs
crates/atracdenc-core/src/container/: aea.rs  at3.rs  mod.rs  (+3 more)
crates/atracdenc-core/tests/: at1_roundtrip.rs  at3_mdct_gain.rs  at3p_gha.rs  at3p_pqf.rs  atrac_psy_common.rs  gain_processor.rs  mdct_reference.rs
crates/atracdenc/src/: lib.rs
crates/atracdenc/tests/: sony_delay_align.rs
docs/: atrac3plus-gha-optimization.md  bench.sh  compute_snr.py  cpp-rust-parity-audit.md  decode-profiling.md  idiomatic-rust-fixes.md  precision-analysis.md  sony-delay-alignment.md  speed-snr-comparison.md
plans/: 00-overview.md  01-workspace-setup.md  02-foundations.md  03-dsp-transforms.md  04-dsp-dynamics.md  05-shared-atrac.md  06-pcm-io-containers.md  07-atrac1.md  08-atrac3.md  09-atrac3plus.md  10-cli.md  11-integration-validation.md  validation-notes.md
(+14 files in other folders)
