[workspace]
resolver = "3"
members = [
    "crates/atracdenc",
    "crates/atracdenc-core",
    "crates/atracdenc-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "LGPL-2.1-or-later"
repository = ""

# Optimized build with full debug symbols, for sampling profilers (samply).
[profile.profiling]
inherits = "release"
debug = true
strip = false
