[package]
name = "atracdenc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "atracdenc"
path = "src/main.rs"

[dependencies]
atracdenc-core = { path = "../atracdenc-core" }
clap = { version = "4.5.40", features = ["derive"] }
