[package]
name = "atracdenc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "atracdenc"
path = "src/main.rs"

[dependencies]
atracdenc = { path = "../atracdenc" }
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.32"
